syntax = "proto3";
package alice.checkers.checkers;

import "gogoproto/gogo.proto";
import "checkers/params.proto";
import "checkers/next_game.proto";
import "checkers/stored_game.proto";
import "checkers/player_info.proto";
import "checkers/leaderboard.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/alice/checkers/x/checkers/types";

// GenesisState defines the checkers module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  NextGame nextGame = 2;
  repeated StoredGame storedGameList = 3;
  repeated PlayerInfo playerInfoList = 4;
  Leaderboard leaderboard = 5;
  // this line is used by starport scaffolding # genesis/proto/state
}
