syntax = "proto3";
package alice.checkers.checkers;

option go_package = "github.com/alice/checkers/x/checkers/types";

message StoredGame {
  string index = 1;
  string game = 2;
  string turn = 3;
  string red = 4;
  string black = 5;
  string creator = 6;
  uint64 moveCount = 7;
  string beforeId = 8; // Pertains to the FIFO. Towards head.
  string afterId = 9; // Pertains to the FIFO. Towards tail.
  string deadline = 10;
  string winner = 11;
}

